--- a/contact.html
+++ b/contact.html
@@ -203,9 +203,9 @@
                         class="mx-4 md:mx-[60px] p-4 md:p-16 dark:border-[#212425] dark:border-2 bg-color-810 rounded-xl dark:bg-[#111111] mb-[30px] md:mb-[60px]">
                         <h3 class="text-4xl">
                             <span class="text-gray-lite dark:text-[#A6A6A6]">I'm always open to discussing
-                                product</span>
+                                </span>
                             <br />
-                            <span class="font-semibold dark:text-white">design work or partnerships.</span>
+                            <span class="font-semibold dark:text-white">career opportunities or partnerships.</span>
                         </h3>
 
                         <form action="https://formspree.io/f/xdojaery" method="POST">
