--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
                             Logistics Sales Manager </h3>
                         <div class="flex justify-center space-x-3">
                             <!-- dribbble icon and link -->
-                            <a href="https://instagram.com/" target="_blank" rel="noopener noreferrer">
+                            <a href="https://www.instagram.com/eleuteros_alemon/" target="_blank" rel="noopener noreferrer">
                                 <span class="socialbtn text-[#e14a84]">
                                     <i class="fa-brands fa-instagram"></i>
                                 </span>
                             </a>
                             <!-- linkedin icon and link -->
-                            <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+                            <a href="https://www.linkedin.com/in/bazhenalogistics/" target="_blank" rel="noopener noreferrer">
                                 <span class="socialbtn text-[#0072b1]">
                                     <i class="fa-brands fa-linkedin-in"></i>
                                 </span>
@@ -162,8 +162,8 @@
                         </div>
                         <!-- personal infomation end-->
                         <!-- dowanload button -->
-                        <button class="dowanload-btn">
-                            <img class="mr-3" src="./images/icons/dowanload.png" alt="icon" /> Download CV </button>
+                        <a href="./Bazhena_Mandrukevich_CV.pdf" download><button class="dowanload-btn">
+                            <img class="mr-3" src="./images/icons/dowanload.png" alt="icon" /> Download CV </button></a>
                     </div>
                 </div>
             </div>
@@ -217,13 +217,13 @@
 
                                         <div class="flex justify-center space-x-3">
                                             <!-- dribbble icon and link -->
-                                            <a href="https://instagram.com/" target="_blank" rel="noopener noreferrer">
+                                            <a href="https://www.instagram.com/eleuteros_alemon/" target="_blank" rel="noopener noreferrer">
                                                 <span class="socialbtn text-[#e14a84]">
                                                     <i class="fa-brands fa-instagram"></i>
                                                 </span>
                                             </a>
                                             <!-- linkedin icon and link -->
-                                            <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+                                            <a href="https://www.linkedin.com/in/bazhenalogistics/" target="_blank" rel="noopener noreferrer">
                                                 <span class="socialbtn text-[#0072b1]">
                                                     <i class="fa-brands fa-linkedin-in"></i>
                                                 </span>
@@ -275,10 +275,10 @@
                                         <!-- personal info end -->
 
                                         <!-- dowanload button -->
-                                        <button class="dowanload-btn">
+                                        <a href="./Bazhena_Mandrukevich_CV.pdf" download></a><button class="dowanload-btn">
                                             <img class="mr-3" src="./images/icons/dowanload.png" alt="icon" /> Download
                                             CV
-                                        </button>
+                                        </button></a>
                                     </div>
                                 </div>
                             </div>
@@ -287,13 +287,9 @@
                             <div class="lg:grid grid-cols-12 md:gap-10 pt-4 md:pt-[30px] items-center hidden">
                                 <div class="col-span-12 space-y-2.5">
                                     <div class="lg:mr-16">
-                                        <p class="text-[#44566c] dark:text-color-910 leading-7"> I'm Creative Director
-                                            and UI/UX Designer from Sydney, Australia, working in web development and
-                                            print media. I enjoy turning complex problems into simple, beautiful and
-                                            intuitive designs. </p>
-                                        <p class="text-[#44566c] leading-7 mt-2.5 dark:text-color-910"> My aim is to
-                                            bring across your message and identity in the most creative way. I created
-                                            web design for many famous brand companies. </p>
+                                        <p class="text-[#44566c] dark:text-color-910 leading-7"> I'm a Logistics Manager from Kaunas, Lithuania, working in a UAB "Hegelmann Transporte" at the moment. </p>
+                                        <p class="text-[#44566c] leading-7 mt-2.5 dark:text-color-910"> I enjoy organizing things related to deliveries, orders, and routes in a way that will make the whole process smooth and easy for both clients and drivers. </p>
+                                        <p class="text-[#44566c] leading-7 mt-2.5 dark:text-color-910"> My goal is to become a superior organizer (better say, a dedicated manager) that will help companies make their logistics flawless, regardless of the difficulty of their current system load. </p>
                                     </div>
                                     <div></div>
                                 </div>
@@ -303,15 +299,14 @@
 
                         <!-- what i do section start -->
                         <div class="pb-12 px-2 sm:px-5 md:px-10 lg:px-14">
-                            <h3 class="text-[35px] dark:text-white font-bold font-robotoSlab pb-5"> What I do! </h3>
+                            <h3 class="text-[35px] dark:text-white font-bold font-robotoSlab pb-5"> My Activities </h3>
                             <div class="grid gap-8 grid-cols-1 md:grid-cols-2 xl:grid-cols-2">
                                 <div class="about-box bg-[#fcf4ff] dark:bg-transparent">
                                     <img class="w-10 h-10 object-contain block" src="./images/icons/icon.svg"
                                         alt="icon" />
                                     <div class="space-y-2">
-                                        <h3 class="dark:text-white text-[22px] font-semibold"> Ui/Ux Design </h3>
-                                        <p class="leading-8 text-gray-lite dark:text-[#A6A6A6]"> Lorem ipsum dolor sit
-                                            amet, consectetuer adipiscing elit, sed diam euismod volutpat. </p>
+                                        <h3 class="dark:text-white text-[22px] font-semibold"> Logistics is everything </h3>
+                                        <p class="leading-8 text-gray-lite dark:text-[#A6A6A6]"> I search and fulfill orders on Timocom. </p>
                                     </div>
                                 </div>
 
@@ -319,19 +314,17 @@
                                     <img class="w-10 h-10 object-contain block" src="./images/icons/icon1.svg"
                                         alt="icon" />
                                     <div class="space-y-2">
-                                        <h3 class="dark:text-white text-[22px] font-semibold"> App Development </h3>
-                                        <p class="leading-8 text-gray-lite dark:text-[#A6A6A6]"> Lorem ipsum dolor sit
-                                            amet, consectetuer adipiscing elit, sed diam euismod volutpat. </p>
+                                        <h3 class="dark:text-white text-[22px] font-semibold"> Managing the time </h3>
+                                        <p class="leading-8 text-gray-lite dark:text-[#A6A6A6]"> I keep up-to-date on shipping carriers, routes, and rates and any changes to them. </p>
                                     </div>
                                 </div>
 
-                                <div class="about-box bg-[#fcf4ff] dark:bg-transparent">
+                                <div class="about-box bg-[#fefaf0] dark:bg-transparent">
                                     <img class="w-10 h-10 object-contain block" src="./images/icons/icon2.svg"
                                         alt="icon" />
                                     <div class="space-y-2">
-                                        <h3 class="dark:text-white text-[22px] font-semibold"> Photography </h3>
-                                        <p class="leading-8 text-gray-lite dark:text-[#A6A6A6]"> Lorem ipsum dolor sit
-                                            amet, consectetuer adipiscing elit, sed diam euismod volutpat. </p>
+                                        <h3 class="dark:text-white text-[22px] font-semibold"> Let's make a deal </h3>
+                                        <p class="leading-8 text-gray-lite dark:text-[#A6A6A6]"> I select carriers for transportation and negotiate rates and contracts with carriers. </p>
                                     </div>
                                 </div>
 
@@ -339,9 +332,8 @@
                                     <img class="w-10 h-10 object-contain block" src="./images/icons/icon3.svg"
                                         alt="icon" />
                                     <div class="space-y-2">
-                                        <h3 class="dark:text-white text-[22px] font-semibold"> Photography </h3>
-                                        <p class="leading-8 text-gray-lite dark:text-[#A6A6A6]"> Lorem ipsum dolor sit
-                                            amet, consectetuer adipiscing elit, sed diam euismod volutpat. </p>
+                                        <h3 class="dark:text-white text-[22px] font-semibold"> Not on my watch </h3>
+                                        <p class="leading-8 text-gray-lite dark:text-[#A6A6A6]"> I resolve any arising problems or complaints. </p>
                                     </div>
                                 </div>
 
@@ -349,9 +341,8 @@
                                     <img class="w-10 h-10 object-contain block" src="./images/icons/icon4.svg"
                                         alt="icon" />
                                     <div class="space-y-2">
-                                        <h3 class="dark:text-white text-[22px] font-semibold"> Managment </h3>
-                                        <p class="leading-8 text-gray-lite dark:text-[#A6A6A6]"> Lorem ipsum dolor sit
-                                            amet, consectetuer adipiscing elit, sed diam euismod volutpat. </p>
+                                        <h3 class="dark:text-white text-[22px] font-semibold"> I see you! </h3>
+                                        <p class="leading-8 text-gray-lite dark:text-[#A6A6A6]"> I track subcontract vehicles and handling all the interactions with managers and clients. </p>
                                     </div>
                                 </div>
 
@@ -359,9 +350,24 @@
                                     <img class="w-10 h-10 object-contain block" src="./images/icons/icon5.svg"
                                         alt="icon" />
                                     <div class="space-y-2">
-                                        <h3 class="dark:text-white text-[22px] font-semibold"> Web Development </h3>
-                                        <p class="leading-8 text-gray-lite dark:text-[#A6A6A6]"> Lorem ipsum dolor sit
-                                            amet, consectetuer adipiscing elit, sed diam euismod volutpat. </p>
+                                        <h3 class="dark:text-white text-[22px] font-semibold"> The A-Z approach </h3>
+                                        <p class="leading-8 text-gray-lite dark:text-[#A6A6A6]"> I direct, optimize and coordinate full order cycle. </p>
+                                    </div>
+                                </div>
+                                <div class="about-box bg-[#fefaf0] dark:bg-transparent">
+                                    <img class="w-10 h-10 object-contain block" src="./images/icons/icon5.svg"
+                                        alt="icon" />
+                                    <div class="space-y-2">
+                                        <h3 class="dark:text-white text-[22px] font-semibold"> Papers, please! </h3>
+                                        <p class="leading-8 text-gray-lite dark:text-[#A6A6A6]"> I liaise and negotiate with suppliers, manufacturers, retailers, and consumers. </p>
+                                    </div>
+                                </div>
+                                <div class="about-box bg-[#fff4f4] dark:bg-transparent">
+                                    <img class="w-10 h-10 object-contain block" src="./images/icons/icon5.svg"
+                                        alt="icon" />
+                                    <div class="space-y-2">
+                                        <h3 class="dark:text-white text-[22px] font-semibold"> KPI Guru </h3>
+                                        <p class="leading-8 text-gray-lite dark:text-[#A6A6A6]"> I meet cost, productivity, accuracy, and timeliness targets. </p>
                                     </div>
                                 </div>
                             </div>
