--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                             <h3 class="text-[35px] dark:text-white font-bold font-robotoSlab pb-5"> My Activities </h3>
                             <div class="grid gap-8 grid-cols-1 md:grid-cols-2 xl:grid-cols-2">
                                 <div class="about-box bg-[#fcf4ff] dark:bg-transparent">
-                                    <img class="w-10 h-10 object-contain block" src="./images/icons/icon.svg"
+                                    <img class="w-10 h-10 object-contain block" src="./images/icons/logistics.png"
                                         alt="icon" />
                                     <div class="space-y-2">
                                         <h3 class="dark:text-white text-[22px] font-semibold"> Logistics is everything </h3>
@@ -311,7 +311,7 @@
                                 </div>
 
                                 <div class="about-box bg-[#fefaf0] dark:bg-transparent">
-                                    <img class="w-10 h-10 object-contain block" src="./images/icons/icon1.svg"
+                                    <img class="w-10 h-10 object-contain block" src="./images/icons/clock.png"
                                         alt="icon" />
                                     <div class="space-y-2">
                                         <h3 class="dark:text-white text-[22px] font-semibold"> Managing the time </h3>
@@ -320,7 +320,7 @@
                                 </div>
 
                                 <div class="about-box bg-[#fefaf0] dark:bg-transparent">
-                                    <img class="w-10 h-10 object-contain block" src="./images/icons/icon2.svg"
+                                    <img class="w-10 h-10 object-contain block" src="./images/icons/handshake.png"
                                         alt="icon" />
                                     <div class="space-y-2">
                                         <h3 class="dark:text-white text-[22px] font-semibold"> Let's make a deal </h3>
@@ -329,7 +329,7 @@
                                 </div>
 
                                 <div class="about-box bg-[#fff4f4] dark:bg-transparent">
-                                    <img class="w-10 h-10 object-contain block" src="./images/icons/icon3.svg"
+                                    <img class="w-10 h-10 object-contain block" src="./images/icons/resolved.png"
                                         alt="icon" />
                                     <div class="space-y-2">
                                         <h3 class="dark:text-white text-[22px] font-semibold"> Not on my watch </h3>
@@ -338,7 +338,7 @@
                                 </div>
 
                                 <div class="about-box bg-[#fff0f8] dark:bg-transparent">
-                                    <img class="w-10 h-10 object-contain block" src="./images/icons/icon4.svg"
+                                    <img class="w-10 h-10 object-contain block" src="./images/icons/track.png"
                                         alt="icon" />
                                     <div class="space-y-2">
                                         <h3 class="dark:text-white text-[22px] font-semibold"> I see you! </h3>
@@ -347,7 +347,7 @@
                                 </div>
 
                                 <div class="about-box bg-[#f3faff] dark:bg-transparent">
-                                    <img class="w-10 h-10 object-contain block" src="./images/icons/icon5.svg"
+                                    <img class="w-10 h-10 object-contain block" src="./images/icons/recycle.png"
                                         alt="icon" />
                                     <div class="space-y-2">
                                         <h3 class="dark:text-white text-[22px] font-semibold"> The A-Z approach </h3>
@@ -355,7 +355,7 @@
                                     </div>
                                 </div>
                                 <div class="about-box bg-[#fefaf0] dark:bg-transparent">
-                                    <img class="w-10 h-10 object-contain block" src="./images/icons/icon5.svg"
+                                    <img class="w-10 h-10 object-contain block" src="./images/icons/document.png"
                                         alt="icon" />
                                     <div class="space-y-2">
                                         <h3 class="dark:text-white text-[22px] font-semibold"> Papers, please! </h3>
@@ -363,7 +363,7 @@
                                     </div>
                                 </div>
                                 <div class="about-box bg-[#fff4f4] dark:bg-transparent">
-                                    <img class="w-10 h-10 object-contain block" src="./images/icons/icon5.svg"
+                                    <img class="w-10 h-10 object-contain block" src="./images/icons/kpi.png"
                                         alt="icon" />
                                     <div class="space-y-2">
                                         <h3 class="dark:text-white text-[22px] font-semibold"> KPI Guru </h3>
