--- a/resume.html
+++ b/resume.html
@@ -281,7 +281,7 @@
                                     <div class="mb-5">
                                         <div class="flex justify-between mb-1">
                                             <span
-                                                class=" font-semibold text-[#526377] dark:text-[#A6A6A6]">MS Teams - Internal Commucation</span>
+                                                class=" font-semibold text-[#526377] dark:text-[#A6A6A6]">MS Teams - Internal Communication</span>
                                             <span class=" font-semibold text-[#526377] dark:text-[#A6A6A6"></span>
                                         </div>
                                         <div class="w-full rounded-full h-1">
