--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                                         alt="icon" />
                                     <div class="space-y-2">
                                         <h3 class="dark:text-white text-[22px] font-semibold"> I see you! </h3>
-                                        <p class="leading-8 text-gray-lite dark:text-[#A6A6A6]"> I track subcontract vehicles and handling all the interactions with managers and clients. </p>
+                                        <p class="leading-8 text-gray-lite dark:text-[#A6A6A6]"> I track subcontract vehicles and handle all the interactions with managers and clients. </p>
                                     </div>
                                 </div>
 
@@ -351,7 +351,7 @@
                                         alt="icon" />
                                     <div class="space-y-2">
                                         <h3 class="dark:text-white text-[22px] font-semibold"> The A-Z approach </h3>
-                                        <p class="leading-8 text-gray-lite dark:text-[#A6A6A6]"> I direct, optimize and coordinate full order cycle. </p>
+                                        <p class="leading-8 text-gray-lite dark:text-[#A6A6A6]"> I direct, optimize and coordinate the full order cycle. </p>
                                     </div>
                                 </div>
                                 <div class="about-box bg-[#fefaf0] dark:bg-transparent">
