--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <h2 class="mt-6 mb-1 text-[26px] font-semibold dark:text-white"> Bazhena Mandrukevich </h2>
                         <h3
                             class="mb-4 text-[#7B7B7B] inline-block dark:bg-[#1D1D1D] px-5 py-1.5 rounded-lg dark:text-[#A6A6A6]">
-                            Logistics Sales Manager </h3>
+                            Logistics Specialist </h3>
                         <div class="flex justify-center space-x-3">
                             <!-- dribbble icon and link -->
                             <a href="https://www.instagram.com/eleuteros_alemon/" target="_blank" rel="noopener noreferrer">
@@ -147,7 +147,7 @@
                                 </span>
                                 <div class="text-left ml-2.5">
                                     <p class="text-xs text-[#44566C] dark:text-[#A6A6A6]"> Location </p>
-                                    <p class="dark:text-white">Vilnius/Kaunas, Lithuania</p>
+                                    <p class="dark:text-white">Vilnius, Lithuania</p>
                                 </div>
                             </div>
                             <div class="flex py-2.5">
@@ -287,7 +287,7 @@
                             <div class="lg:grid grid-cols-12 md:gap-10 pt-4 md:pt-[30px] items-center hidden">
                                 <div class="col-span-12 space-y-2.5">
                                     <div class="lg:mr-16">
-                                        <p class="text-[#44566c] dark:text-color-910 leading-7"> I'm a Logistics Manager from Kaunas, Lithuania, working in a UAB "Hegelmann Transporte" at the moment. </p>
+                                        <p class="text-[#44566c] dark:text-color-910 leading-7"> I'm a Logistics Specialist from Vilnius, Lithuania, working at "Manvesta". </p>
                                         <p class="text-[#44566c] leading-7 mt-2.5 dark:text-color-910"> I enjoy organizing things related to deliveries, orders, and routes in a way that will make the whole process smooth and easy for both clients and drivers. </p>
                                         <p class="text-[#44566c] leading-7 mt-2.5 dark:text-color-910"> My goal is to become a superior organizer (better say, a dedicated manager) that will help companies make their logistics flawless, regardless of the difficulty of their current system load. </p>
                                     </div>
@@ -418,7 +418,7 @@
 
                         <!-- footer start -->
                         <footer class="overflow-hidden rounded-b-2xl" style="background: transparent">
-                            <p class="text-center py-6 text-gray-lite dark:text-color-910"> © 2022 </p>
+                            <p class="text-center py-6 text-gray-lite dark:text-color-910"> © 2024 </p>
                         </footer>
                         <!-- footer section end -->
                     </div>
