--- a/resume.html
+++ b/resume.html
@@ -105,13 +105,13 @@
                             Logistics Sales Manager </h3>
                         <div class="flex justify-center space-x-3">
                             <!-- dribbble icon and link -->
-                            <a href="https://instagram.com/" target="_blank" rel="noopener noreferrer">
+                            <a href="https://www.instagram.com/eleuteros_alemon/" target="_blank" rel="noopener noreferrer">
                                 <span class="socialbtn text-[#e14a84]">
                                     <i class="fa-brands fa-instagram"></i>
                                 </span>
                             </a>
                             <!-- linkedin icon and link -->
-                            <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+                            <a href="https://www.linkedin.com/in/bazhenalogistics/" target="_blank" rel="noopener noreferrer">
                                 <span class="socialbtn text-[#0072b1]">
                                     <i class="fa-brands fa-linkedin-in"></i>
                                 </span>
@@ -143,7 +143,7 @@
                                 </span>
                                 <div class="text-left ml-2.5">
                                     <p class="text-xs text-[#44566C] dark:text-[#A6A6A6]"> Location </p>
-                                    <p class="dark:text-white">Vilnius/Kaunas, Lithuania</p>
+                                    <p class="dark:text-white">Vilnius, Lithuania</p>
                                 </div>
                             </div>
                             <div class="flex py-2.5">
@@ -204,10 +204,15 @@
                                             <i class="fa-solid text-6xl text-[#F95054] fa-briefcase"></i>
                                             <h4 class="text-5xl dark:text-white font-medium"> Experience </h4>
                                         </div>
-                                        
                                         <div
                                             class="bg-[#eef5fa] dark:bg-transparent py-4 pl-5 pr-3 space-y-2 rounded-lg mb-6 dark:border-[#212425] dark:border-2">
-                                            <span class="text-tiny text-gray-lite dark:text-[#b7b7b7]">Feb 2022 - Present Time</span>
+                                            <span class="text-tiny text-gray-lite dark:text-[#b7b7b7]">Dec 2022 - Present Time</span>
+                                            <h3 class="text-xl dark:text-white"> Logistics Specialist </h3>
+                                            <p class="dark:text-[#b7b7b7]"> Manvesta, Vilnius </p>
+                                        </div>
+                                        <div
+                                            class="bg-[#eef5fa] dark:bg-transparent py-4 pl-5 pr-3 space-y-2 rounded-lg mb-6 dark:border-[#212425] dark:border-2">
+                                            <span class="text-tiny text-gray-lite dark:text-[#b7b7b7]">Feb 2022 - Dec 2022</span>
                                             <h3 class="text-xl dark:text-white"> Sales Manager </h3>
                                             <p class="dark:text-[#b7b7b7]"> Hegelmann Transporte, Kaunas </p>
                                         </div>
