--- a/contact.html
+++ b/contact.html
@@ -109,13 +109,13 @@
                             Logistics Sales Manager </h3>
                         <div class="flex justify-center space-x-3">
                             <!-- dribbble icon and link -->
-                            <a href="https://instagram.com/" target="_blank" rel="noopener noreferrer">
+                            <a href="https://www.linkedin.com/in/bazhenalogistics/" target="_blank" rel="noopener noreferrer">
                                 <span class="socialbtn text-[#e14a84]">
                                     <i class="fa-brands fa-instagram"></i>
                                 </span>
                             </a>
                             <!-- linkedin icon and link -->
-                            <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+                            <a href="https://www.linkedin.com/in/bazhenalogistics/" target="_blank" rel="noopener noreferrer">
                                 <span class="socialbtn text-[#0072b1]">
                                     <i class="fa-brands fa-linkedin-in"></i>
                                 </span>
@@ -254,7 +254,7 @@
 
                     <!-- footer start -->
                     <footer class="overflow-hidden bg-[#f8fbfb] dark:bg-[#212425] rounded-b-2xl">
-                        <p class="text-center py-6 text-gray-lite dark:text-color-910"> © 2022 </p>
+                        <p class="text-center py-6 text-gray-lite dark:text-color-910"> © 2024 </p>
                     </footer>
                     <!-- footer end -->
                 </div>
