--- a/contact.html
+++ b/contact.html
@@ -163,7 +163,7 @@
                         <!-- personal infomation end-->
                         <!-- dowanload button -->
                         <button class="dowanload-btn">
-                            <img class="mr-3" src="./images/icons/dowanload.png" alt="icon" /> Download CV </button>
+                            <img class="mr-3" src="./Bazhena_Mandrukevich_CV.pdf" alt="icon" /> Download CV </button>
                     </div>
                 </div>
             </div>
