--- a/resume.html
+++ b/resume.html
@@ -158,7 +158,7 @@
                         </div>
                         <!-- personal infomation end-->
                         <!-- dowanload button -->
-                        <button class="dowanload-btn">
+                        <button class="download-btn">
                             <img class="mr-3" src="./Bazhena_Mandrukevich_CV.pdf" alt="icon" /> Download CV </button>
                     </div>
                 </div>
