--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
                             Logistics Sales Manager </h3>
                         <div class="flex justify-center space-x-3">
                             <!-- dribbble icon and link -->
-                            <a href="https://www.linkedin.com/in/bazhenalogistics/" target="_blank" rel="noopener noreferrer">
+                            <a href="https://www.instagram.com/eleuteros_alemon/" target="_blank" rel="noopener noreferrer">
                                 <span class="socialbtn text-[#e14a84]">
                                     <i class="fa-brands fa-instagram"></i>
                                 </span>
