--- a/contact.html
+++ b/contact.html
@@ -162,8 +162,8 @@
                         </div>
                         <!-- personal infomation end-->
                         <!-- dowanload button -->
-                        <button class="download-btn">
-                            <img class="mr-3" src="./Bazhena_Mandrukevich_CV.pdf" alt="icon" /> Download CV </button>
+                        <a href="./Bazhena_Mandrukevich_CV.pdf" download><button class="dowanload-btn">
+                            <img class="mr-3" src="./images/icons/dowanload.png" alt="icon" /> Download CV </button></a>
                     </div>
                 </div>
             </div>
