--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
                         <h2 class="mt-6 mb-1 text-[26px] font-semibold dark:text-white"> Bazhena Mandrukevich </h2>
                         <h3
                             class="mb-4 text-[#7B7B7B] inline-block dark:bg-[#1D1D1D] px-5 py-1.5 rounded-lg dark:text-[#A6A6A6]">
-                            Logistics Sales Manager </h3>
+                            Logistics Specialist </h3>
                         <div class="flex justify-center space-x-3">
                             <!-- dribbble icon and link -->
                             <a href="https://www.instagram.com/eleuteros_alemon/" target="_blank" rel="noopener noreferrer">
