--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                 </span>
                                 <div class="text-left ml-2.5">
                                     <p class="text-xs text-[#44566C] dark:text-[#A6A6A6]"> Phone </p>
-                                    <p class="dark:text-white">+370 609 23 102</p>
+                                    <p class="dark:text-white">+48 451 596 626</p>
                                 </div>
                             </div>
                             <div class="flex border-b border-[#E3E3E3] dark:border-[#3D3A3A] py-2.5">
@@ -147,7 +147,7 @@
                                 </span>
                                 <div class="text-left ml-2.5">
                                     <p class="text-xs text-[#44566C] dark:text-[#A6A6A6]"> Location </p>
-                                    <p class="dark:text-white">Vilnius, Lithuania</p>
+                                    <p class="dark:text-white">Warsaw, Poland</p>
                                 </div>
                             </div>
                             <div class="flex py-2.5">
@@ -238,7 +238,7 @@
                                                 </span>
                                                 <div class="text-left ml-2.5">
                                                     <p class="text-xs text-[#44566C] dark:text-[#A6A6A6]"> Phone </p>
-                                                    <p class="dark:text-white">+370 609 23 102</p>
+                                                    <p class="dark:text-white">+48 451 596 626</p>
                                                 </div>
                                             </div>
 
@@ -287,7 +287,7 @@
                             <div class="lg:grid grid-cols-12 md:gap-10 pt-4 md:pt-[30px] items-center hidden">
                                 <div class="col-span-12 space-y-2.5">
                                     <div class="lg:mr-16">
-                                        <p class="text-[#44566c] dark:text-color-910 leading-7"> I'm a Logistics Specialist from Vilnius, Lithuania, working at "Manvesta". </p>
+                                        <p class="text-[#44566c] dark:text-color-910 leading-7"> I'm a Logistics Specialist currently based in Warsaw, Poland. </p>
                                         <p class="text-[#44566c] leading-7 mt-2.5 dark:text-color-910"> I enjoy organizing things related to deliveries, orders, and routes in a way that will make the whole process smooth and easy for both clients and drivers. </p>
                                         <p class="text-[#44566c] leading-7 mt-2.5 dark:text-color-910"> My goal is to become a superior organizer (better say, a dedicated manager) that will help companies make their logistics flawless, regardless of the difficulty of their current system load. </p>
                                     </div>
