--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                                                 </span>
                                                 <div class="text-left ml-2.5">
                                                     <p class="text-xs text-[#44566C] dark:text-[#A6A6A6]"> Location </p>
-                                                    <p class="dark:text-white">Kaunas, Lithuania</p>
+                                                    <p class="dark:text-white">Warsaw, Poland</p>
                                                 </div>
                                             </div>
 
